# birdhy

./: birdhy.nix  flake.nix  meson.build
src/: client.vala  icon_lookup.vala  lib.vala  main.vala  monitor.vala  result.vala
src/json/: lib.vala
